--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,9 @@ body {
   background: #fff;
   color: #1C1C1C;
   font-family: "Open Sans", sans-serif;
-  overflow-x: hidden;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /*
@@ -801,7 +803,34 @@ body {
   }
 }
 
+@media (max-width: 890px) {
+  body {
+    width: 110%;
+  }
+  .wave {
+    width: 110%;
+    height: 100px;
+  }
+}
+
+@media (max-width: 810px) {
+  body {
+    width: 130%;
+  }
+  .wave {
+    width: 130%;
+    height: 100px;
+  }
+}
+
 @media (max-width: 767px) {
+  body {
+    width: 125%;
+  }
+  .wave {
+    width: 125%;
+    height: 100px;
+  }
   .image {
     left: 55%;
     top: 110px;
@@ -815,5 +844,76 @@ body {
   }
   .skills {
     padding: 20px 0;
+  }
+}
+
+@media (max-width: 475px) {
+  body {
+    width: 150%;
+  }
+  .wave {
+    width: 150%;
+    height: 100px;
+  }
+}
+
+@media (max-height: 475px) {
+  #home {
+    height: 125vh;
+  }
+  .wave {
+    width: 100%;
+    height: 90px;
+    bottom: -150px;
+  }
+}
+
+@media (max-width: 405px) {
+  body {
+    width: 210%;
+  }
+  .wave {
+    width: 210%;
+    height: 100px;
+  }
+}
+
+@media (max-width: 290px) {
+  body {
+    width: 225%;
+  }
+  .wave {
+    width: 225%;
+    height: 100px;
+  }
+}
+
+@media (max-width: 275px) {
+  body {
+    width: 230%;
+  }
+  .wave {
+    width: 230%;
+    height: 100px;
+  }
+}
+
+@media (max-width: 266px) {
+  body {
+    width: 233%;
+  }
+  .wave {
+    width: 233%;
+    height: 100px;
+  }
+}
+
+@media (max-width: 260px) {
+  body {
+    width: 235%;
+  }
+  .wave {
+    width: 235%;
+    height: 100px;
   }
 }
